# fastapi_prisma

./: .gitignore  README.md  main.py  pyproject.toml  schema.prisma
controllers/: author.py  post.py
db/: db_session.py
migrations/20230905093159_init/: migration.sql
migrations/20230905095818_add_email_author/: migration.sql
migrations/20230905102003_add_content_to_post_model/: migration.sql
migrations/20230905102707_change_camelcase_to_snakecase/: migration.sql
migrations/20230905102831_change_create_at_to_created_at_on_post/: migration.sql
schemas/: author.py  post.py
